<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" >
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">94043</string>
    <string name="pref_temp_key" translatable="false">temperature</string>
    <string name="pref_temp_default" translatable="false">metric</string>
    <string name="pref_temp_label">Temperature</string>
    <string name="temp_unit_metric">metric</string>
    <string name="temp_unit_imperial">imperial</string>
    <string name="temp_label_metric">Metric</string>
    <string name="temp_label_imperial">Imperial</string>
    <string name="action_view_location">View Location</string>
    <string name="action_share">Share</string>
    <string name="today">Today</string>
    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>
    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>
    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>
    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.miguelrodari.sunshine.app</string>

    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <string name="pref_notification_key" translatable="false">enable_notificaitons</string>
    <string name="pref_notification_default" translatable="false">true</string>
    <string name="pref_notification_true">Enabled</string>
    <string name="pref_notification_false">Not Enabled</string>
    <string name="pref_notification_label">Weather Notifications</string>

    <string name="pref_local_key" translatable="false">language</string>
    <string name="pref_local_default" translatable="false">en</string>
    <string name="pref_local_label">Language</string>
    <string name="pref_local_english">en</string>
    <string name="pref_local_spanish">es</string>
    <string name="pref_label_local_english">English</string>
    <string name="pref_label_local_spanish">Spanish</string>
</resources>
